@@ -63,7 +63,7 @@ _systemctl () {
 
         local -A OPTS=(
                [STANDALONE]='--all -a --reverse --after --before --defaults --fail --ignore-dependencies --failed --force -f --full -l --global
-                             --help -h --no-ask-password --no-block --no-legend --no-pager --no-reload --no-wall
+                             --help -h --no-block --no-legend --no-pager --no-reload --no-wall
                              --quiet -q --privileged -P --system --user --version --runtime --recursive -r'
                       [ARG]='--kill-who --property -p --signal -s --type -t --state --root'
         )
