@@ -326,7 +326,6 @@ _arguments -s \
     "--no-wall[Don't send wall message before halt/power-off/reboot]" \
     '--global[Enable/disable unit files globally]' \
     "--no-reload[When enabling/disabling unit files, don't reload daemon configuration]" \
-    '--no-ask-password[Do not ask for system passwords]' \
     '--kill-who=[Who to send signal to]:killwho:(main control all)' \
     {-s+,--signal=}'[Which signal to send]:signal:_signals' \
     {-f,--force}'[When enabling unit files, override existing symlinks. When shutting down, execute action immediately]' \
